RESOLVED FIXED267746
Timer::stop can short-circuit in most cases
https://bugs.webkit.org/show_bug.cgi?id=267746
Summary Timer::stop can short-circuit in most cases
Ryosuke Niwa
Reported 2024-01-18 18:16:22 PST
Don't make a function call when the timer isn't active.
Attachments
Ryosuke Niwa
Comment 1 2024-01-18 18:28:19 PST
EWS
Comment 2 2024-01-18 22:51:37 PST
Committed 273212@main (741a55f3d6f1): <https://commits.webkit.org/273212@main> Reviewed commits have been landed. Closing PR #22955 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-01-18 22:52:14 PST
Note You need to log in before you can comment on or make changes to this bug.