Cherry-pick 741a55f3d6f1. rdar://121241762

Timer::stop can short-circuit in most cases
    https://bugs.webkit.org/show_bug.cgi?id=267746

    Reviewed by Yusuke Suzuki and Darin Adler.

    Add a fast path for when the timer isn't scheduled.

    * Source/WebCore/platform/Timer.cpp:
    (WebCore::TimerBase::stopSlowCase):
    (WebCore::TimerBase::stop): Deleted.
    * Source/WebCore/platform/Timer.h:
    (WebCore::TimerBase::stop):

    Canonical link: https://commits.webkit.org/273212@main

Canonical link: https://commits.webkit.org/272448.301@safari-7618-branch